# mobile-sdk-react

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  lefthook.yml  package.json  react-native-mobile-sdk.podspec  react-native-sprucekit-wallet-sdk.podspec  react-native-wallet-sdk.podspec  tsconfig.json
.github/workflows/: ci.yml  docs.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/mobilesdk/: MobileSdkActivity.kt  MobileSdkModule.kt  MobileSdkPackage.kt
android/src/main/java/com/sprucekitwalletsdk/: SprucekitWalletSdkModule.java  SprucekitWalletSdkPackage.java
android/src/main/java/com/walletsdk/: WalletSdkActivity.kt  WalletSdkModule.kt  WalletSdkPackage.kt
android/src/newarch/: MobileSdkSpec.kt  SprucekitWalletSdkSpec.java  WalletSdkSpec.kt
android/src/oldarch/: MobileSdkSpec.kt  SprucekitWalletSdkSpec.java  WalletSdkSpec.kt
cpp/: react-native-sprucekit-wallet-sdk.cpp  react-native-sprucekit-wallet-sdk.h
example/: app.json  index.js  package.json
example/android/: settings.gradle
example/ios/: .xcode.env.local  File.swift  Podfile
example/src/: App.tsx  AsyncModuleView.tsx  CredentialsTab.tsx  CredentialsView.tsx  DebugTab.tsx  SelectiveDisclosureView.tsx  ShareTab.tsx  ShareView.tsx  (+1 more)
ios/: MobileSdk.mm  MobileSdk.swift  SprucekitWalletSdk.h  SprucekitWalletSdk.mm  WalletSdk.h  WalletSdk.mm  WalletSdk.swift
src/: NativeMobileSdk.ts  NativeSprucekitWalletSdk.ts  NativeWalletSdk.ts  index.tsx
(+25 files in other folders)
